@@ -3,15 +3,12 @@ package com.example.httpparquet;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import tools.jackson.databind.ObjectMapper;
-
-import java.util.List;
 
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.Mockito.verify;
@@ -34,12 +31,12 @@ class IngestionControllerTest {
 
     @Test
     void acceptsSingleObject() throws Exception {
-        mvc.perform(post("/ingest")
+        mvc.perform(post("/ingest/tenant1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("{\"a\":1}"))
                 .andExpect(status().isAccepted());
 
-        verify(ingestionQueue).put(argThat(batch -> batch.size() == 1));
+        verify(ingestionQueue).put(argThat(batch -> batch.records().size() == 1));
     }
 
     @Test
@@ -47,29 +44,29 @@ class IngestionControllerTest {
         // A pretty-printed body contains literal newlines. The controller must serialize
         // via Jackson (not pass the raw string) so the JSONL line has no embedded newlines.
         String prettyJson = "{\n  \"a\": 1\n}";
-        mvc.perform(post("/ingest")
+        mvc.perform(post("/ingest/tenant1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(prettyJson))
                 .andExpect(status().isAccepted());
 
         verify(ingestionQueue).put(argThat(batch ->
-                batch.size() == 1 && !batch.get(0).contains("\n")));
+                batch.records().size() == 1 && !batch.records().getFirst().contains("\n")));
     }
 
     @Test
     void acceptsArrayOfObjects() throws Exception {
-        mvc.perform(post("/ingest")
+        mvc.perform(post("/ingest/tenant1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("[{\"a\":1},{\"b\":2}]"))
                 .andExpect(status().isAccepted());
 
         // One queue op, batch contains 2 records
-        verify(ingestionQueue).put(argThat(batch -> batch.size() == 2));
+        verify(ingestionQueue).put(argThat(batch -> batch.records().size() == 2));
     }
 
     @Test
     void rejectsMalformedJson() throws Exception {
-        mvc.perform(post("/ingest")
+        mvc.perform(post("/ingest/tenant1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("not-json"))
                 .andExpect(status().isBadRequest());
@@ -77,7 +74,7 @@ class IngestionControllerTest {
 
     @Test
     void rejectsScalarBody() throws Exception {
-        mvc.perform(post("/ingest")
+        mvc.perform(post("/ingest/tenant1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("\"hello\""))
                 .andExpect(status().isBadRequest());
@@ -85,7 +82,7 @@ class IngestionControllerTest {
 
     @Test
     void rejectsWrongContentType() throws Exception {
-        mvc.perform(post("/ingest")
+        mvc.perform(post("/ingest/tenant1")
                         .contentType(MediaType.TEXT_PLAIN)
                         .content("{\"a\":1}"))
                 .andExpect(status().isUnsupportedMediaType());
@@ -93,7 +90,7 @@ class IngestionControllerTest {
 
     @Test
     void rejectsArrayWithNonObjectElements() throws Exception {
-        mvc.perform(post("/ingest")
+        mvc.perform(post("/ingest/tenant1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("[{\"a\":1}, \"not-an-object\"]"))
                 .andExpect(status().isBadRequest());
